cmake_minimum_required(VERSION 3.20)
project(system-programming C)

set(CMAKE_C_STANDARD 11)

add_executable(system-programming chapter2/t1.c chapter2/t2.c c_chapter1/helloword.c c_chapter1/1.2.c c_chapter1/1.4.c c_chapter1/1.5.c c_chapter1/echo.c c_chapter1/1.6.c c_chapter1/char_count.c c_chapter1/line_count.c c_chapter1/1.8.c c_chapter1/1.9.c c_chapter1/1.10.c c_chapter1/1.12.c c_chapter1/1.13.c c_chapter1/1.13.horizontal.c c_chapter1/1.13.vertical.c c_chapter1/1.14.c c_chapter1/1.15.c c_chapter1/1.16.c c_chapter1/1.17.c c_chapter1/1.18.c c_chapter1/1.19.c c_chapter1/common.c c_chapter2/2.1.c c_chapter2/2.10.c c_chapter3/3.1.c c_chapter3/3.4.c)
